overflow fix

--- a/styles/_form.scss
+++ b/styles/_form.scss
@@ -12,11 +12,10 @@
 section {
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 #form {
     width: 100vw;
-    padding: 1rem;
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
